<resources>
    <string name="app_name">ConsumerApp</string>
    <string name="nama_user">User Name</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="repo_text">Repo</string>
    <string name="repo_count">120</string>
    <string name="follower_text">Follower</string>
    <string name="follower_count">120</string>
    <string name="following_text">Following</string>
    <string name="following_count">120</string>
    <string name="location">Location</string>
    <string name="user_login">User Login</string>
    <string name="company_not_set">Company Not Set</string>
    <string name="name_not_set">Fullname Not Set</string>
    <string name="location_not_set">Location Not Set</string>

    <string name="user_avatar">User Profile Photo</string>
    <string name="info_icon">Information Icon</string>
    <string name="no_data">No Data Available</string>
    <string name="app_logo">Application Logo</string>
    <string name="back_button_image">Back Button Image</string>
</resources>
